chore: ported to 1.20.6
No Forge support at this time; Fabric & NeoForge only