@@ -1,8 +1,8 @@
 
 package dev.ftb.mods.ftbfiltersystem.filter.compound;
 
-import dev.ftb.mods.ftbfiltersystem.api.filter.AbstractCompoundFilter;
 import dev.ftb.mods.ftbfiltersystem.api.FTBFilterSystemAPI;
+import dev.ftb.mods.ftbfiltersystem.api.filter.AbstractCompoundFilter;
 import dev.ftb.mods.ftbfiltersystem.api.filter.SmartFilter;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.ItemStack;
@@ -27,7 +27,7 @@ public class NotFilter extends AbstractCompoundFilter {
 
     @Override
     public boolean test(ItemStack stack) {
-        return !getChildren().isEmpty() && !getChildren().get(0).test(stack);
+        return !getChildren().isEmpty() && !getChildren().getFirst().test(stack);
     }
 
     public static NotFilter fromString(SmartFilter.Compound parent, String str) {
